# clap

./: .gitignore
clap_complete/: Cargo.toml
clap_complete/examples/: dynamic.rs
clap_complete/ignore/: dynamic.bash  dynamic.fish  dynamic.zsh
clap_complete/src/: dynamic.rs
clap_complete/src/dynamic/: bash.rs  cmd.rs  complete.rs  completion.rs  mod.rs  zsh.rs
clap_complete/src/dynamic/shells/: mod.rs
clap_complete/src/dynamic/shells/bash/: template.bash
clap_complete/src/dynamic/shells/fish/: generate.rs  template.fish
clap_complete/src/dynamic/shells/zsh/: complete.rs  generate.rs  template.zsh
clap_complete/src/generator/: utils.rs
clap_complete/tests/: bash.rs  dynamic.rs
clap_complete/tests/manual/: bash_complete.zsh
clap_complete/tests/testsuite/: bash.rs
